[gd_scene load_steps=2 format=3 uid="uid://bg4h5rxaec70b"]

[ext_resource type="Script" uid="uid://d11g0rb5hmgte" path="res://addons/apx-accessibility/clear_text/text_theme_editor.gd" id="1_xspe3"]

[node name="TextThemeEditor" type="Control" node_paths=PackedStringArray("preview_text")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xspe3")
preview_text = NodePath("PreviewLabel")

[node name="PreviewLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 380.0
offset_right = 619.0
offset_bottom = 403.0
text = "Preview Text"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 160.0
offset_right = 508.0
offset_bottom = 227.0
theme_override_constants/separation = 7

[node name="HBoxContainer (Font Color)" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer (Font Color)"]
layout_mode = 2
text = "Font Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer (Font Color)"]
custom_minimum_size = Vector2(100, 30)
layout_direction = 2
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="HBoxContainer (Back Color)" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer (Back Color)"]
layout_mode = 2
text = "Background Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer (Back Color)"]
custom_minimum_size = Vector2(100, 30)
layout_direction = 2
layout_mode = 2

[connection signal="color_changed" from="VBoxContainer/HBoxContainer (Font Color)/ColorPickerButton" to="." method="_on_font_color_changed"]
[connection signal="color_changed" from="VBoxContainer/HBoxContainer (Back Color)/ColorPickerButton" to="." method="_on_background_color_changed"]
